--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
         <div class="home-intro">
           <p class="caveat-font-family">The shine that never hides</p>
         <div class="owl-carousel owl-theme">
-          <img  src="./assets/img/sliderimg1.jpg" alt="">
-          <img  src="./assets/img/sliderimg2.jpg"alt="">
-          <img  src="./assets/img/sliderimg3.jpg" alt="">
+          <img  src="./assets/img/slider1.jpg" alt="">
+          <img  src="./assets/img/slider2.jpg"alt="">
+          <img  src="./assets/img/slider3.jpg" alt="">
         </div>
       </div>
 
