again img changes

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <p class="caveat-font-family">The shine that never hides</p>
         <div class="owl-carousel owl-theme">
           <img  src="./assets/img/slider1.jpg" alt="">
-          <img  src="./assets/img/slider2.jpg"alt="">
+          <img  src="./assets/img/sliderimg3.jpg"alt="">
           <img  src="./assets/img/slider3.jpg" alt="">
         </div>
       </div>
