lazy load image

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         </section>
 
         <section class="category-section">
-            <img src="./assets/img/w1.jpg" alt="">
-            <img class="second-img" src=" ./assets/img/w2.jpg" alt="">
+            <img loading="lazy" src="./assets/img/w1.jpg" alt="">
+            <img loading="lazy" class="second-img" src=" ./assets/img/w2.jpg" alt="">
             <div class="category-section-info-wrapper">
               <h2>Trendy Casual Wear</h2>
               <p>No one can match the coolness when you wear this dresses.</p>
@@ -203,8 +203,8 @@
         </section>
 
         <section class="category-section-reversed margintop">
-            <img class="third-column" src=" ./assets/img/e1.jpg" alt="">
-            <img class="second-img second-column" src=" ./assets/img/e2.jpg" alt="">
+            <img loading="lazy" class="third-column" src=" ./assets/img/e1.jpg" alt="">
+            <img  loading="lazy" class="second-img second-column" src=" ./assets/img/e2.jpg" alt="">
             <div class="category-section-info-wrapper first-column">
               <h2>Bridal Collections</h2>
               <p>Lets the Indian-ness show! Life is too short to blend in</p>
@@ -216,8 +216,8 @@
         </section>
 
         <section class="category-section margintop marginbottom">
-            <img src=" ./assets/img/m1.jpg" alt="">
-            <img class="second-img" src=" ./assets/img/m2.jpg" alt="">
+            <img loading="lazy" src=" ./assets/img/m1.jpg" alt="">
+            <img loading="lazy" class="second-img" src=" ./assets/img/m2.jpg" alt="">
             <div class="category-section-info-wrapper">
               <h2>Authentic Menswear</h2>
               <p>Nothing is noteworthy more than your outfit.</p>
