Changes for website

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
           <p class="caveat-font-family">The shine that never hides</p>
         <div class="owl-carousel owl-theme">
           <img  src="./assets/img/slider1.jpg" alt="">
-          <img  src="./assets/img/sliderimg3.jpg"alt="">
-          <img  src="./assets/img/slider3.jpg" alt="">
+          <img  src="./assets/img/slidertest2.jpg"alt="">
+          <img  src="./assets/img/IMG_5016.jpg" alt="">
         </div>
       </div>
 
-        <section class="shop-by-category section-container">
+        <!-- <section class="shop-by-category section-container">
           <h2 class="section__title">Shop By Category</h2>
           <div class="shop-by-category-grid grid grid-column">
             <div class="card">
@@ -187,11 +187,29 @@
               </a>
             </div>
           </div>
+        </section> -->
+        <section class="sub-category">
+          <div class="sub-category--conatiner">
+            <div class="sub-category--inner-container"></div>
+            <img src="./assets/img/slider3s.jpg"" />
+            <div class="sub-category-info">
+              <p>WOMENSWEAR</p>
+              <a href="#">SHOP NOW</a>
+            </div>
+          </div>
+          <div class="sub-category--conatiner">
+            <div class="sub-category--inner-container"></div>
+            <img src="./assets/img/m1.jpg"" />
+            <div class="sub-category-info">
+              <p>MENSWEAR</p>
+              <a href="#">SHOP NOW</a>
+            </div>
+          </div>
         </section>
 
         <section class="category-section">
-            <img loading="lazy" src="./assets/img/w1.jpg" alt="">
-            <img loading="lazy" class="second-img" src=" ./assets/img/w2.jpg" alt="">
+            <img loading="lazy" src="./assets/img/d1.jpg" alt="">
+            <img loading="lazy" class="second-img" src="./assets/img/trendy3.JPG" alt="">
             <div class="category-section-info-wrapper">
               <h2>Trendy Casual Wear</h2>
               <p>No one can match the coolness when you wear this dresses.</p>
